latest: add standard ApiResponse, global exception handling, and Yahoo Finance live market data integration